  * usr/bin/byobu.in:
    - ensure we start tmux with unicode support, LP: #1268072
  * usr/bin/byobu.in, usr/share/man/man1/byobu.1: LP: #1483394
    - byobu -h|--help enters manpage, place this code with -v|--version
  * usr/bin/byobu-shell.in: LP: #1458941
    - find the motd
  * usr/share/byobu/keybindings/f-keys.tmux.disable: LP: #1453037
    - ensure that we source user's keybindings

  [ Fortunato Ventre ]
  * usr/lib/byobu/include/constants:
    - Fix check for sed's follow-symlinks feature
      + https://github.com/dustinkirkland/byobu/pull/9

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 17 Jun 2015 20:21:41 -0500

byobu (5.94-0ubuntu1) wily; urgency=medium

  * debian/control, usr/bin/vigpg, usr/share/man/man1/vigpg.1:
    - after the Lastpass breach, more people could use vigpg,
      so move it over to Bybou from Bikeshed
  * usr/bin/Makefile.am, usr/share/man/man1/Makefile.am:
    - add vigpg to build
  * usr/share/man/man1/vigpg.1:
    - fix typo

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 17 Jun 2015 20:21:39 -0500

byobu (5.93-0ubuntu1) wily; urgency=medium

  * usr/bin/byobu.in: LP: #1417323
    - fix broken mv call
  * usr/lib/byobu/swap:
    - clear swap status when swap usage returns to zero

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 21 May 2015 08:27:04 -0700

byobu (5.92-0ubuntu1) vivid; urgency=medium

  * usr/bin/byobu-launcher-install.in: LP: #1396959
    - silence warnings if byobu-launch doesn't exist (e.g., uninstalled it)
  * usr/bin/byobu-config.in: LP: #1383669
    - revert commit to LP: #1316050, which hardcoded LANG=C
    - this should fix rendering of Japanese characters in the menu
  * usr/share/byobu/keybindings/f-keys.tmux: LP: #1350813
    - handle tmux 1.9's default path changes, per:
      https://sourceforge.net/p/tmux/tmux-code/ci/1.9/tree/CHANGES

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 23 Mar 2015 12:50:56 -0500

byobu (5.91-0ubuntu1) vivid; urgency=medium

  [ Thibaut Broggi ]
  * po/fr.po: