@@ -22,7 +22,7 @@ PKG="byobu"
 [ -z "${BYOBU_PREFIX}" ] && export BYOBU_PREFIX="@prefix@" || export BYOBU_PREFIX
 . "${BYOBU_PREFIX}/lib/${PKG}/include/common"
 
-$BYOBU_SED -i -e "/#byobu-prompt#$/d" "$HOME/.bashrc"
+$BYOBU_SED_INLINE -e "/#byobu-prompt#$/d" "$HOME/.bashrc"
 
 if [ "$1" != "--no-reload" ]; then
 	if [ -n "$TMUX" ] && [ "$SHELL" = "/bin/bash" ]; then
