@@ -49,7 +49,7 @@ $BYOBU_TEST greadlink >/dev/null 2>&1 && export BYOBU_READLINK="greadlink" || ex
 $BYOBU_TEST sensible-pager >/dev/null 2>&1 && export BYOBU_PAGER="sensible-pager" || export BYOBU_PAGER="less"
 
 # Check sed's follow-symlinks feature
-$BYOBU_SED --follow-symlinks "s///" /dev/null 2>/dev/null && BYOBU_SED="$BYOBU_SED --follow-symlinks" || true
+$BYOBU_SED --follow-symlinks "s///" /dev/null 2>/dev/null && BYOBU_SED_INLINE="$BYOBU_SED -i --follow-symlinks" || BYOBU_SED_INLINE="$BYOBU_SED -i"
 
 # Determine if we have ulimit support
 $BYOBU_TEST ulimit >/dev/null 2>&1 && export BYOBU_ULIMIT="ulimit" || export BYOBU_ULIMIT="false"
